--- a/circle-camera/src-tauri/Info.plist
+++ b/circle-camera/src-tauri/Info.plist
@@ -6,5 +6,7 @@
     <string>This app needs access to your camera to display the webcam feed in a circle.</string>
     <key>NSMicrophoneUsageDescription</key>
     <string>This app needs access to your microphone for video recording.</string>
+    <key>NSCameraUseContinuityCameraDeviceType</key>
+    <true/>
 </dict>
 </plist>
