--- a/circle-camera/package.json
+++ b/circle-camera/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "icons": "pnpm tauri icon public/icon.svg",
+    "build:macos": "pnpm tauri build --target aarch64-apple-darwin"
   },
   "dependencies": {
     "vue": "^3.5.13",
