feat: update .gitignore to include installers directory and enhance README with installation and development instructions

--- a/circle-camera/.gitignore
+++ b/circle-camera/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# Keep installers directory but ignore other build artifacts
+/src-tauri/target
+!/installers
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
