--- a/circle-camera/package.json
+++ b/circle-camera/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "tauri": "tauri",
     "icons": "pnpm tauri icon public/icon.svg",
-    "build:macos": "pnpm tauri build --target aarch64-apple-darwin"
+    "build:macos": "pnpm tauri build --target aarch64-apple-darwin",
+    "build:installer": "pnpm tauri build && mkdir -p installers && cp src-tauri/target/release/bundle/dmg/circle-camera_*.dmg installers/"
   },
   "dependencies": {
     "vue": "^3.5.13",
