--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "tauri": "tauri",
     "icons": "pnpm tauri icon public/icon.svg",
     "build:macos": "pnpm tauri build --target aarch64-apple-darwin",
-    "build:installer": "pnpm tauri build && mkdir -p installers && cp src-tauri/target/release/bundle/dmg/circle-camera_*.dmg installers/"
+    "build:installer": "pnpm tauri build && mkdir -p installers && cp src-tauri/target/release/bundle/dmg/circle-camera_*.dmg installers/",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -22,6 +25,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
+    "vitepress": "^1.6.3",
     "vue-tsc": "^2.1.10"
   },
   "pnpm": {
