--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@vercel/analytics": "^1.5.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
