--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2",
+    "@tauri-apps/api": "^2.4.1",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-shell": "^2.2.1",
     "@vercel/analytics": "^1.5.0",
     "vue": "^3.5.13"
   },
