--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@iconify-icons/icomoon-free": "^1.2.3",
+    "@iconify/vue": "^4.3.0",
     "@tauri-apps/api": "^2.4.1",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2.2.1",
     "@vercel/analytics": "^1.5.0",
+    "@vicons/ionicons5": "^0.13.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
