--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@tauri-apps/plugin-shell": "^2.2.1",
     "@vercel/analytics": "^1.5.0",
     "@vicons/ionicons5": "^0.13.0",
-    "vue": "^3.5.13"
+    "@vueform/slider": "^2.1.10",
+    "vue": "^3.5.13",
+    "vue-color-kit": "^1.0.6",
+    "vue-colorful": "^0.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
