--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "circle-camera",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,10 +17,16 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2",
+    "@iconify-icons/icomoon-free": "^1.2.3",
+    "@iconify/vue": "^4.3.0",
+    "@tauri-apps/api": "^2.4.1",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-shell": "^2.2.1",
     "@vercel/analytics": "^1.5.0",
-    "vue": "^3.5.13"
+    "@vicons/ionicons5": "^0.13.0",
+    "@vueform/slider": "^2.1.10",
+    "vue": "^3.5.13",
+    "vue-colorful": "^0.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
