--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,14 +60,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'pnpm'
 
-      - name: Install Rust toolchain
+      - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
+          components: rustfmt, clippy
           targets: aarch64-apple-darwin,x86_64-apple-darwin
 
+      - name: Install additional dependencies
+        run: |
+          rustup target add aarch64-apple-darwin x86_64-apple-darwin
+          rustup default stable
+          rustup show
+          cargo --version
+
       - name: Install PNPM
-        run: npm install -g pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
 
       - name: Install dependencies
         run: pnpm install
@@ -102,20 +113,34 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'pnpm'
 
-      - name: Install Rust toolchain
+      - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
+          components: rustfmt, clippy
           targets: x86_64-pc-windows-msvc
 
-      - name: Setup Windows build tools
-        run: npm install -g windows-build-tools
+      - name: Install additional dependencies
+        run: |
+          rustup target add x86_64-pc-windows-msvc
+          rustup default stable
+          rustup show
+          cargo --version
 
       - name: Install PNPM
-        run: npm install -g pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
 
       - name: Install dependencies
         run: pnpm install
+
+      - name: Install Windows WebView2
+        run: |
+          $ProgressPreference = 'SilentlyContinue'
+          Invoke-WebRequest "https://go.microsoft.com/fwlink/p/?LinkId=2124703" -OutFile "MicrosoftEdgeWebview2Setup.exe"
+          Start-Process -FilePath "MicrosoftEdgeWebview2Setup.exe" -Args "/silent /install" -Verb RunAs -Wait
 
       - name: Build for Windows
         run: pnpm tauri build --target x86_64-pc-windows-msvc
@@ -137,9 +162,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'pnpm'
 
       - name: Install PNPM
-        run: npm install -g pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
 
       - name: Install dependencies
         run: pnpm install
