--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,58 +101,60 @@ jobs:
           name: circle-camera-macos-x64
           path: src-tauri/target/x86_64-apple-darwin/release/bundle/dmg/*.dmg
 
-  build-windows:
-    needs: check-version
-    if: needs.check-version.outputs.should_release == 'true'
-    runs-on: windows-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'pnpm'
-
-      - name: Install Rust stable
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
-          targets: x86_64-pc-windows-msvc
-
-      - name: Install additional dependencies
-        run: |
-          rustup target add x86_64-pc-windows-msvc
-          rustup default stable
-          rustup show
-          cargo --version
-
-      - name: Install PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Install Windows WebView2
-        run: |
-          $ProgressPreference = 'SilentlyContinue'
-          Invoke-WebRequest "https://go.microsoft.com/fwlink/p/?LinkId=2124703" -OutFile "MicrosoftEdgeWebview2Setup.exe"
-          Start-Process -FilePath "MicrosoftEdgeWebview2Setup.exe" -Args "/silent /install" -Verb RunAs -Wait
-
-      - name: Build for Windows
-        run: pnpm tauri build --target x86_64-pc-windows-msvc
-
-      - name: Upload Windows Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: circle-camera-windows
-          path: src-tauri/target/x86_64-pc-windows-msvc/release/bundle/msi/*.msi
+  # Windows build is commented out as Windows is not officially supported
+  # build-windows:
+  #   needs: check-version
+  #   if: needs.check-version.outputs.should_release == 'true'
+  #   runs-on: windows-latest
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '18'
+  #         cache: 'pnpm'
+  #
+  #     - name: Install Rust stable
+  #       uses: dtolnay/rust-toolchain@stable
+  #       with:
+  #         components: rustfmt, clippy
+  #         targets: x86_64-pc-windows-msvc
+  #
+  #     - name: Install additional dependencies
+  #       run: |
+  #         rustup target add x86_64-pc-windows-msvc
+  #         rustup default stable
+  #         rustup show
+  #         cargo --version
+  #
+  #     - name: Install PNPM
+  #       uses: pnpm/action-setup@v3
+  #       with:
+  #         version: 8
+  #
+  #     - name: Install dependencies
+  #       run: pnpm install
+  #
+  #     - name: Install Windows WebView2
+  #       run: |
+  #         $ProgressPreference = 'SilentlyContinue'
+  #         Invoke-WebRequest "https://go.microsoft.com/fwlink/p/?LinkId=2124703" -OutFile "MicrosoftEdgeWebview2Setup.exe"
+  #         Start-Process -FilePath "MicrosoftEdgeWebview2Setup.exe" -Args "/silent /install" -Verb RunAs -Wait
+  #
+  #     - name: Build for Windows
+  #       run: pnpm tauri build --target x86_64-pc-windows-msvc
+  #
+  #     - name: Upload Windows Artifact
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: circle-camera-windows
+  #         path: src-tauri/target/x86_64-pc-windows-msvc/release/bundle/msi/*.msi
 
   create-release:
-    needs: [check-version, build-macos, build-windows]
+    needs: [check-version, build-macos]
+    # Remove build-windows from dependencies since Windows is not supported
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -185,7 +187,7 @@ jobs:
           mkdir -p release-assets
           cp artifacts/circle-camera-macos-aarch64/*.dmg release-assets/
           cp artifacts/circle-camera-macos-x64/*.dmg release-assets/
-          cp artifacts/circle-camera-windows/*.msi release-assets/
+          # Windows asset copy is removed as it's not supported
           
           # Generate latest.json 
           node ./scripts/generate-update-json.js
@@ -205,6 +207,11 @@ jobs:
             # Circle Camera ${{ needs.check-version.outputs.version }}
             
             Automated release from version ${{ needs.check-version.outputs.previous_version }} to ${{ needs.check-version.outputs.version }}
+            
+            ## Platform Support
+            
+            Circle Camera is officially supported on macOS only (both Intel and Apple Silicon).
+            Windows is not officially supported at this time.
             
             ## How to Test This Release
             
@@ -237,15 +244,7 @@ jobs:
           asset_name: Circle.Camera_${{ needs.check-version.outputs.version }}_x64.dmg
           asset_content_type: application/octet-stream
 
-      - name: Upload Windows Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release-assets/Circle.Camera_${{ needs.check-version.outputs.version }}_x64_en-US.msi
-          asset_name: Circle.Camera_${{ needs.check-version.outputs.version }}_x64_en-US.msi
-          asset_content_type: application/octet-stream
+      # Windows asset upload is removed as it's not supported
 
       - name: Upload latest.json Asset
         uses: actions/upload-release-asset@v1
