--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,12 @@ on:
     paths:
       - 'package.json'
       - 'src-tauri/tauri.conf.json'
+  workflow_dispatch:
+    inputs:
+      force_release:
+        description: 'Force a release even if version has not changed'
+        type: boolean
+        default: false
 
 jobs:
   check-version:
@@ -38,8 +44,8 @@ jobs:
           echo "Previous version: $PREVIOUS_VERSION"
           
           # Determine if we should create a release
-          if [ "$CURRENT_VERSION" != "$PREVIOUS_VERSION" ]; then
-            echo "Version changed from $PREVIOUS_VERSION to $CURRENT_VERSION"
+          if [ "$CURRENT_VERSION" != "$PREVIOUS_VERSION" ] || ${{ github.event.inputs.force_release == 'true' }}; then
+            echo "Version changed from $PREVIOUS_VERSION to $CURRENT_VERSION or force_release is true"
             echo "should_release=true" >> $GITHUB_OUTPUT
             echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
             echo "previous_version=$PREVIOUS_VERSION" >> $GITHUB_OUTPUT
@@ -48,113 +54,17 @@ jobs:
             echo "should_release=false" >> $GITHUB_OUTPUT
           fi
 
-  build-macos:
+  build:
     needs: check-version
     if: needs.check-version.outputs.should_release == 'true'
-    runs-on: macos-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'pnpm'
-
-      - name: Install Rust stable
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
-          targets: aarch64-apple-darwin,x86_64-apple-darwin
-
-      - name: Install additional dependencies
-        run: |
-          rustup target add aarch64-apple-darwin x86_64-apple-darwin
-          rustup default stable
-          rustup show
-          cargo --version
-
-      - name: Install PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Build for macOS (Apple Silicon)
-        run: pnpm tauri build --target aarch64-apple-darwin
-
-      - name: Build for macOS (Intel)
-        run: pnpm tauri build --target x86_64-apple-darwin
-
-      - name: Upload macOS (Apple Silicon) Artifact 
-        uses: actions/upload-artifact@v4
-        with:
-          name: circle-camera-macos-aarch64
-          path: src-tauri/target/aarch64-apple-darwin/release/bundle/dmg/*.dmg
-
-      - name: Upload macOS (Intel) Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: circle-camera-macos-x64
-          path: src-tauri/target/x86_64-apple-darwin/release/bundle/dmg/*.dmg
-
-  # Windows build is commented out as Windows is not officially supported
-  # build-windows:
-  #   needs: check-version
-  #   if: needs.check-version.outputs.should_release == 'true'
-  #   runs-on: windows-latest
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
-  #
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: '18'
-  #         cache: 'pnpm'
-  #
-  #     - name: Install Rust stable
-  #       uses: dtolnay/rust-toolchain@stable
-  #       with:
-  #         components: rustfmt, clippy
-  #         targets: x86_64-pc-windows-msvc
-  #
-  #     - name: Install additional dependencies
-  #       run: |
-  #         rustup target add x86_64-pc-windows-msvc
-  #         rustup default stable
-  #         rustup show
-  #         cargo --version
-  #
-  #     - name: Install PNPM
-  #       uses: pnpm/action-setup@v3
-  #       with:
-  #         version: 8
-  #
-  #     - name: Install dependencies
-  #       run: pnpm install
-  #
-  #     - name: Install Windows WebView2
-  #       run: |
-  #         $ProgressPreference = 'SilentlyContinue'
-  #         Invoke-WebRequest "https://go.microsoft.com/fwlink/p/?LinkId=2124703" -OutFile "MicrosoftEdgeWebview2Setup.exe"
-  #         Start-Process -FilePath "MicrosoftEdgeWebview2Setup.exe" -Args "/silent /install" -Verb RunAs -Wait
-  #
-  #     - name: Build for Windows
-  #       run: pnpm tauri build --target x86_64-pc-windows-msvc
-  #
-  #     - name: Upload Windows Artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: circle-camera-windows
-  #         path: src-tauri/target/x86_64-pc-windows-msvc/release/bundle/msi/*.msi
+    uses: ./.github/workflows/build.yml
+    with:
+      version: ${{ needs.check-version.outputs.version }}
+      should_build: true
 
   create-release:
-    needs: [check-version, build-macos]
-    # Remove build-windows from dependencies since Windows is not supported
+    needs: [check-version, build]
+    if: needs.check-version.outputs.should_release == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -243,8 +153,6 @@ jobs:
           asset_path: ./release-assets/Circle.Camera_${{ needs.check-version.outputs.version }}_x64.dmg
           asset_name: Circle.Camera_${{ needs.check-version.outputs.version }}_x64.dmg
           asset_content_type: application/octet-stream
-
-      # Windows asset upload is removed as it's not supported
 
       - name: Upload latest.json Asset
         uses: actions/upload-release-asset@v1
