feat: add should_build input to control build execution in workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,11 +25,15 @@ on:
         required: false
         type: string
         description: "Version override (uses package.json if not provided)"
+      should_build:
+        required: false
+        type: boolean
+        default: true
+        description: "Whether to build the application"
 
 jobs:
   build-macos:
     runs-on: macos-latest
-    if: inputs.should_build != false
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
