feat: optimize PNPM setup by skipping install and updating PATH in workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,10 @@ jobs:
         uses: pnpm/action-setup@v3
         with:
           version: 8
+          run_install: false
+
+      - name: Add PNPM to PATH
+        run: echo "PATH=$(pnpm -g bin):$PATH" >> $GITHUB_ENV
 
       - name: Install dependencies
         run: pnpm install
