Refactor build workflow to use separate validation workflow and streamline job steps

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,26 +43,10 @@ on:
 
 jobs:
   validate:
-    runs-on: macos-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Install PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-          run_install: true
-
-      - name: Run validation
-        run: pnpm run validate
+    uses: ./.github/workflows/validate.yml
 
   build-macos:
+    needs: validate
     runs-on: macos-latest
     if: inputs.validate_only == 'false'
     steps:
