--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -8,6 +8,9 @@ on:
   
   # Allow manual triggering
   workflow_dispatch:
+  
+  # Allow being called from other workflows
+  workflow_call:
 
 jobs:
   validate:
