--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,6 @@ jobs:
     needs: [check-version, build]
     if: needs.check-version.outputs.should_release == 'true'
     runs-on: ubuntu-latest
-    # Add explicit permissions for creating releases
     permissions:
       contents: write
       issues: write
@@ -79,7 +78,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          # Remove cache since we need to set up pnpm first
 
       - name: Install PNPM
         uses: pnpm/action-setup@v3
@@ -87,7 +85,6 @@ jobs:
           version: 8
           run_install: true
           
-      # Add caching after pnpm is available
       - name: Setup Node.js with PNPM cache
         uses: actions/setup-node@v4
         with:
@@ -99,20 +96,80 @@ jobs:
         with:
           path: artifacts
 
-      - name: List all artifacts
-        run: ls -la artifacts/*
+      - name: Examine artifact structure
+        run: |
+          echo "Listing base artifacts directory:"
+          ls -la artifacts || echo "No artifacts directory found."
+          
+          echo "Listing installers directory:"
+          ls -la installers || echo "No installers directory found."
+          
+          echo "Searching for DMG files in any location:"
+          find . -name "*.dmg" || echo "No DMG files found."
+          
+          # Create the release assets directory
+          mkdir -p release-assets
+
+      - name: Find macOS Apple Silicon artifact
+        id: find_aarch64
+        run: |
+          # First try to find in artifacts directory from build job
+          AARCH64_DMG=$(find artifacts -name "*aarch64.dmg" 2>/dev/null | head -n 1)
+          
+          # If not found, try installers directory
+          if [ -z "$AARCH64_DMG" ]; then
+            echo "Apple Silicon DMG not found in artifacts, checking installers directory..."
+            AARCH64_DMG=$(find installers -name "*aarch64.dmg" 2>/dev/null | head -n 1)
+          fi
+          
+          # If still not found, look anywhere in the repository
+          if [ -z "$AARCH64_DMG" ]; then
+            echo "Apple Silicon DMG not found in installers, checking entire repository..."
+            AARCH64_DMG=$(find . -name "*aarch64.dmg" 2>/dev/null | head -n 1)
+          fi
+          
+          if [ -z "$AARCH64_DMG" ]; then
+            echo "ERROR: Could not find Apple Silicon DMG file"
+            exit 1
+          fi
+          
+          echo "Found Apple Silicon DMG: $AARCH64_DMG"
+          echo "path=$AARCH64_DMG" >> $GITHUB_OUTPUT
+          echo "filename=$(basename $AARCH64_DMG)" >> $GITHUB_OUTPUT
+          cp "$AARCH64_DMG" release-assets/
+
+      - name: Find macOS Intel artifact
+        id: find_x64
+        run: |
+          # First try to find in artifacts directory from build job
+          X64_DMG=$(find artifacts -name "*x64.dmg" 2>/dev/null | head -n 1)
+          
+          # If not found, try installers directory
+          if [ -z "$X64_DMG" ]; then
+            echo "Intel DMG not found in artifacts, checking installers directory..."
+            X64_DMG=$(find installers -name "*x64.dmg" 2>/dev/null | head -n 1)
+          fi
+          
+          # If still not found, look anywhere in the repository
+          if [ -z "$X64_DMG" ]; then
+            echo "Intel DMG not found in installers, checking entire repository..."
+            X64_DMG=$(find . -name "*x64.dmg" 2>/dev/null | head -n 1)
+          fi
+          
+          # Set a flag to indicate if we found the file (don't exit with error)
+          if [ -z "$X64_DMG" ]; then
+            echo "WARNING: Could not find Intel DMG file. Continuing without it."
+            echo "found=false" >> $GITHUB_OUTPUT
+          else
+            echo "Found Intel DMG: $X64_DMG"
+            echo "path=$X64_DMG" >> $GITHUB_OUTPUT
+            echo "filename=$(basename $X64_DMG)" >> $GITHUB_OUTPUT
+            echo "found=true" >> $GITHUB_OUTPUT
+            cp "$X64_DMG" release-assets/
+          fi
 
       - name: Generate update JSON
         run: |
-          mkdir -p release-assets
-          
-          # Debug: Show what artifacts we have
-          echo "Contents of artifacts directory:"
-          find artifacts -type f -name "*.dmg" | sort
-          
-          # Copy DMG files from artifacts directory
-          find artifacts -type f -name "*.dmg" -exec cp {} release-assets/ \;
-          
           # List the actual files to verify the names
           echo "Files in release-assets directory:"
           ls -la release-assets/
@@ -158,18 +215,19 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "./artifacts/circle-camera-macos-aarch64/Circle Camera_${{ needs.check-version.outputs.version }}_aarch64.dmg"
-          asset_name: "Circle Camera_${{ needs.check-version.outputs.version }}_aarch64.dmg"
+          asset_path: ${{ steps.find_aarch64.outputs.path }}
+          asset_name: ${{ steps.find_aarch64.outputs.filename }}
           asset_content_type: application/octet-stream
 
       - name: Upload macOS Intel Asset
+        if: steps.find_x64.outputs.found == 'true'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "./artifacts/circle-camera-macos-x64/Circle Camera_${{ needs.check-version.outputs.version }}_x64.dmg"
-          asset_name: "Circle Camera_${{ needs.check-version.outputs.version }}_x64.dmg"
+          asset_path: ${{ steps.find_x64.outputs.path }}
+          asset_name: ${{ steps.find_x64.outputs.filename }}
           asset_content_type: application/octet-stream
 
       - name: Upload latest.json Asset
