--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,23 +113,11 @@ jobs:
       - name: Find macOS Apple Silicon artifact
         id: find_aarch64
         run: |
-          # First try to find in artifacts directory from build job
+          # Only find in artifacts directory from build job
           AARCH64_DMG=$(find artifacts -name "*aarch64.dmg" 2>/dev/null | head -n 1)
           
-          # If not found, try installers directory
           if [ -z "$AARCH64_DMG" ]; then
-            echo "Apple Silicon DMG not found in artifacts, checking installers directory..."
-            AARCH64_DMG=$(find installers -name "*aarch64.dmg" 2>/dev/null | head -n 1)
-          fi
-          
-          # If still not found, look anywhere in the repository
-          if [ -z "$AARCH64_DMG" ]; then
-            echo "Apple Silicon DMG not found in installers, checking entire repository..."
-            AARCH64_DMG=$(find . -name "*aarch64.dmg" 2>/dev/null | head -n 1)
-          fi
-          
-          if [ -z "$AARCH64_DMG" ]; then
-            echo "ERROR: Could not find Apple Silicon DMG file"
+            echo "ERROR: Could not find Apple Silicon DMG file in artifacts directory."
             exit 1
           fi
           
@@ -141,24 +129,12 @@ jobs:
       - name: Find macOS Intel artifact
         id: find_x64
         run: |
-          # First try to find in artifacts directory from build job
+          # Only find in artifacts directory from build job
           X64_DMG=$(find artifacts -name "*x64.dmg" 2>/dev/null | head -n 1)
-          
-          # If not found, try installers directory
-          if [ -z "$X64_DMG" ]; then
-            echo "Intel DMG not found in artifacts, checking installers directory..."
-            X64_DMG=$(find installers -name "*x64.dmg" 2>/dev/null | head -n 1)
-          fi
-          
-          # If still not found, look anywhere in the repository
-          if [ -z "$X64_DMG" ]; then
-            echo "Intel DMG not found in installers, checking entire repository..."
-            X64_DMG=$(find . -name "*x64.dmg" 2>/dev/null | head -n 1)
-          fi
           
           # Set a flag to indicate if we found the file (don't exit with error)
           if [ -z "$X64_DMG" ]; then
-            echo "WARNING: Could not find Intel DMG file. Continuing without it."
+            echo "WARNING: Could not find Intel DMG file in artifacts directory. Continuing without it."
             echo "found=false" >> $GITHUB_OUTPUT
           else
             echo "Found Intel DMG: $X64_DMG"
