feat: update .env.example with Tauri updater signing configuration

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@
 
 # Update endpoint for testing (optional)
 # VITE_UPDATE_ENDPOINT=http://localhost:8080/latest.json
+
+# Tauri updater signing configuration
+# Path to your private key for signing updates
+# TAURI_SIGNING_PRIVATE_KEY=/path/to/your/private.key
+# Password for your private key (if applicable)
+# TAURI_SIGNING_PRIVATE_KEY_PASSWORD='your_password_here'
